--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
-
-/* * {
+/* 
+* {
   background: rgba(0, 255, 0, 0.13);
-} */
-
+}
+ */
 
 
 @font-face {
@@ -233,16 +233,26 @@ a {
   margin-left: 80px;
 }
 
-.header-catalog-menu {
-  margin: 0;
-  padding: 0;
 
-  list-style: none;
-}
 
 .header-catalog-block {
   display: flex;
   justify-content: flex-start;
+}
+
+/* Временно скрываем выпадающее меню*/
+.header-catalog-block
+{
+  display: none;
+}
+
+.header-catalog-menu {
+  margin: 0;
+  padding: 0;
+
+  line-height: 36px;
+
+  list-style: none;
 }
 
 .header-catalog-column-1 {
@@ -260,11 +270,6 @@ a {
 
 }
 
-/* Временно скрываем выпадающее меню*/
-.header-catalog-block
-{
-  display: none;
-}
 
 .search-open {
   opacity: 0.3;
@@ -290,9 +295,7 @@ a {
   background-color: #f7e296;
 }
 
-.header-catalog-menu {
-  line-height: 36px;
-}
+
 
 .slider {
   position: relative;
@@ -818,11 +821,36 @@ padding: 0;
 }
 
 .transport-list {
-/* list-style-type */
+  margin: 0;
+  padding: 0;
+
+  margin-top: 67px;
+  margin-left: 18px;
+
+  list-style-type: circle;
 
 }
 
+.transport-list li {
+  padding-left: 18px;
 
+}
+
+.about-us-button {
+  display: block;
+  width: 260px;
+  margin-top: 50px;
+}
+
+.contacts-map {
+  margin-top: 40px;
+}
+
+.write-us-button {
+  display: block;
+  width: 260px;
+  margin-top: 50px;
+}
 
 /*-----------------------*/
 /*-----------------------*/
@@ -1064,12 +1092,12 @@ line-height: 40px;
 }
 
 
-
 /*------------------*/
 /*------------------*/
 /*------------------*/
 
 .main-footer {
+  margin-top: 80px;
   color: #ffffff;
   letter-spacing: 0.01em;
 
@@ -1221,6 +1249,8 @@ line-height: 40px;
 .footer-bottom {
   display: flex;
   justify-content: space-between;
+  align-items: flex-end;
+
   height: 35px;
 }
 
@@ -1234,17 +1264,86 @@ line-height: 40px;
 
 .social-buttons {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
+  width: 142px;
   margin: 0;
   padding: 0;
 
   list-style: none;
 }
 
+.social-button {
+  display: block;
+  width: 32px;
+  height: 32px;
+
+  opacity: 0.3;
+}
+
+.social-button:hover,
+.social-button:focus {
+  opacity: 0.6;
+}
+
+.social-button:active {
+  opacity: 0.1;
+}
+
+.fb-button {
+  background-image: url("../img/fb.svg");
+}
+
+.instagram-button {
+  background-image: url("../img/instagram.svg");
+}
+
+.twitter-button {
+  background-image: url("../img/twitter.svg");
+}
+
+
+/*
+.footer-social ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 141px;
+  margin: 0 auto;
+  padding: 0;
+
+  list-style: none;
+}
+
+.footer-social b {
+  display: block;
+  margin-bottom: 15px;
+}
+
+.social-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 43px;
+  height: 43px;
+
+  background-color: #000000;
+}
+
+.social-button:hover,
+.social-button:focus {
+  background-color: #ffffff;
+} */
+
+
+
+
+
 .footer-bottom .column-3 {
   display: flex;
   justify-content: flex-end;
   width: 80px;
+  height: 35px;
 }
 
 
