--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
-/*
+
 * {
   background: rgba(0, 255, 0, 0.13);
-} */
+}
 
 
 
@@ -119,7 +119,7 @@ input[type="radio"].visually-hidden {
   border: none;
 
   /* Временно */
-  outline: 1px solid gray;
+  /* outline: 1px solid gray; */
 }
 
 .button::before {
@@ -157,6 +157,7 @@ input[type="radio"].visually-hidden {
 .services-button {
   width: 160px;
   margin-bottom: 24px;
+  background-color: transparent;
 }
 
 .about-us-button {
@@ -254,9 +255,11 @@ input[type="radio"].visually-hidden {
 
 .user-navigation {
   display: flex;
+  /* flex-wrap: wrap; */
+
   justify-content: flex-start;
-  align-items: center;
-  height: 49px;
+  align-items: top;
+  min-height: 49px;
   margin: 0;
   padding: 0;
   margin-bottom: 29px;
@@ -264,9 +267,72 @@ input[type="radio"].visually-hidden {
   list-style: none;
 }
 
-.search-open {
-  width: 440px;
+.search-block {
+  width: 441px;
+  margin-top: 8px;
 }
+
+.search-block {
+  /* opacity: 0.3; */
+}
+
+.search-block:hover {
+  /* opacity: 0.6; */
+}
+
+.search-block:focus {
+  /* opacity: 1; */
+}
+
+.search-form {
+  display: flex;
+
+  margin: 0;
+  padding: 0;
+}
+
+.search-input {
+  box-sizing: border-box;
+  width: 356px;
+  height: 49px;
+
+  padding-bottom: 13px;
+  padding-left: 40px;
+
+  color: #000000;
+
+  border: none;
+  border-bottom: 2px solid #000000;
+
+  background: none;
+}
+
+.search-button {
+  box-sizing: border-box;
+  width: 85px;
+  height: 49px;
+
+  color: #000000;
+
+  border: none;
+  border: 2px solid #000000;
+
+  background: none;
+}
+
+.search-input:focus {
+  outline: 0;
+}
+
+.search-input:placeholder-shown + .search-button {
+   display: none
+}
+/* .search-input:focus ~ .search-button {
+  display: inline-block;
+} */
+
+
+
 
 .login-link {
   width: 260px;
@@ -308,20 +374,6 @@ input[type="radio"].visually-hidden {
 .header-contacts {
   width: 120px;
   margin-left: 80px;
-}
-
-
-
-.search-open {
-  opacity: 0.3;
-}
-
-.search-open:hover {
-  opacity: 0.6;
-}
-
-.search-open:focus {
-  opacity: 1;
 }
 
 .site-navigation {
