index - сделал поиск

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
-
+/*
 * {
   background: rgba(0, 255, 0, 0.13);
-}
+} */
 
 
 
@@ -255,7 +255,7 @@ input[type="radio"].visually-hidden {
 
 .user-navigation {
   display: flex;
-  /* flex-wrap: wrap; */
+  flex-wrap: wrap;
 
   justify-content: flex-start;
   align-items: top;
@@ -268,23 +268,11 @@ input[type="radio"].visually-hidden {
 }
 
 .search-block {
-  width: 441px;
-  margin-top: 8px;
-}
-
-.search-block {
-  /* opacity: 0.3; */
-}
-
-.search-block:hover {
-  /* opacity: 0.6; */
-}
-
-.search-block:focus {
-  /* opacity: 1; */
+  width: 440px;
 }
 
 .search-form {
+  width: 440px;
   display: flex;
 
   margin: 0;
@@ -293,18 +281,35 @@ input[type="radio"].visually-hidden {
 
 .search-input {
   box-sizing: border-box;
-  width: 356px;
+  width: 355px;
   height: 49px;
 
-  padding-bottom: 13px;
+  /* padding-bottom: 13px; */
   padding-left: 40px;
+  padding-right: 20px;
 
   color: #000000;
 
-  border: none;
-  border-bottom: 2px solid #000000;
+  vertical-align: middle;
 
-  background: none;
+  border: none;
+  box-shadow: 0 -2px 0 0 #000000 inset;
+
+  background-image: url("../img/search.svg") ;
+  background-repeat: no-repeat; background-position: 2px 16px;
+  background-color: inherit;
+}
+
+input.search-input::placeholder {
+  color: rgba(0, 0, 0, 0.3);
+}
+
+input.search-input:hover::placeholder, input.search-input:focus::placeholder {
+  color: rgba(0, 0, 0, 0.6);
+}
+
+.search-input:focus {
+  outline: 0;
 }
 
 .search-button {
@@ -320,16 +325,32 @@ input[type="radio"].visually-hidden {
   background: none;
 }
 
-.search-input:focus {
-  outline: 0;
+.search-button:hover,
+.search-button:hover {
+  color: #ffffff;
+  background-color: #000000;
+  cursor: pointer;
+}
+
+.search-button:active {
+  color: rgba(255, 255, 255, 0.3);
 }
 
 .search-input:placeholder-shown + .search-button {
    display: none
 }
-/* .search-input:focus ~ .search-button {
-  display: inline-block;
-} */
+
+.search-input:focus + .search-button {
+   display: block;
+}
+
+.search-input:placeholder-shown {
+  box-shadow: none;
+}
+
+.search-input:focus {
+  box-shadow: 0 -2px 0 0 #000000 inset;
+}
 
 
 
@@ -337,16 +358,18 @@ input[type="radio"].visually-hidden {
 .login-link {
   width: 260px;
   margin-left: 100px;
+
+  /* vertical-align: middle;   */
 }
 
 .compare {
   width: 120px;
-  margin-left: 30px;
+  margin-left: 20px;
 }
 
 .basket {
-  width: 84px;
-  margin-left: 20px;
+  width: 90px;
+  margin-left: 10px;
 }
 
 
